Dark mode hover fix.

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -46,7 +46,8 @@ a.button {
   transition: transform 750ms ease;
 }
 
-a.button:hover {
+a.button:not(.dark-mode):hover,
+a.button.dark-mode:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   cursor: pointer;
